Changelog
=========

1.0b3 (unreleased)
------------------

- Fixed context for getting ajax results
  [kroman0]


1.0b2 (2012-03-19)
------------------

- Fix sort-reversed checkbox javascript.
  [timo]

- Move docs/HISTORY.txt to CHANGES.txt to apply to Plone conventions.
  [timo]


1.0b1 (2012-03-09)
------------------

- Stop hardcoding the field name so it works with other field names and
  prefixes.
  [davisagli]

- Rename ArcheTypesQueryWidget to Querywidget to avoid confusion.
  [timo]

- Several JSLint fixes on querywidget.js
  [timo]

- Make sure the sorting settings are actually stored on the collection.
  [timo]


1.0a1 (2011-10-28)
------------------

- Initial release.
  [ralphjacobs, kcleong, jbaumann, hannosch, timo]